Trying to fix overscroll on iOS

--- a/style.less
+++ b/style.less
@@ -1,5 +1,17 @@
 @import url('https://fonts.googleapis.com/css?family=Boogaloo');
 
+body,
+html {
+	position: fixed;
+	width: 100%;
+	box-sizing: border-box;
+	margin: 0;
+}
+
+#app {
+	margin: 20px;
+}
+
 .buttons {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
